# ali-dns

./: Cargo.toml  README.md
examples/: add_domain_record.rs  delete_domain_record.rs  query_domain_records.rs  update_domain_record.rs
examples/common/: .env
src/: client.rs  error.rs  lib.rs
src/types/: dns_config.rs  domain_record.rs  mod.rs  rr_type.rs
src/types/response_type/: add_domain_record_response.rs  del_domain_record_response.rs  mod.rs  query_domain_records_response.rs  update_domain_record_response.rs
