[package]
name = "ali-dns"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "an aliyun dns skd"
authors = ["sanmu <578595193@qq.com>"]
repository = "https://github.com/rust-china/ali-dns"
documentation = "https://docs.rs/ali-dns"
categories = ["api-bindings"]
keywords = ["async", "aliyun", "dns", "sdk"]
exclude = ["/examples"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
bytes = "1.7.1"
chrono = "0.4.38"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17.8"
url = "2.5.2"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.38", features = ["full"] }
ali-dns = { path = "." }
